# scholar-watch-desktop

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scholar_watch.spec  scholar_watch_app.py
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 001_remove_user_models.py
config/: config.example.yaml
deploy/: deploy.sh  scholar-watch-nginx.conf  scholar-watch-scrape.service  scholar-watch-scrape.timer  scholar-watch.service
scholar_watch/: __init__.py  auth.py  charts.py  cli.py  config.py  database.py  email_report.py  metrics.py  models.py  notifications.py  scraper.py
scholar_watch/dashboard/: __init__.py  routes.py
scholar_watch/dashboard/static/css/: style.css
scholar_watch/dashboard/static/js/: dashboard.js
scholar_watch/dashboard/templates/: 404.html  base.html  compare.html  index.html  login.html  notifications.html  publication.html  researcher.html  scholar_settings.html  signup.html
scholar_watch/desktop/: api.py  app.py
scholar_watch/desktop/web/: compare.html  index.html  notifications.html  publication.html  researcher.html
scholar_watch/desktop/web/css/: style.css
scholar_watch/desktop/web/js/: app.js
scholar_watch/email_templates/: report.html
scripts/: dashboard.ps1  dashboard.sh  desktop.ps1  init_db.ps1  init_db.sh  report.ps1  report.sh  scheduled_scrape.ps1  scrape.ps1  scrape.sh
tests/: test_config.py  test_database.py
